--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@ layout: table_wrappers
     </nav>
       <footer class="site-footer">
             <div class="text-small text-grey-dk-000 mb-4">
+				<p style="font-size: larger">{{ site.author }}</p>
               {% if site.license_image_url != nil %}
                 <img alt="{{ site.license_name }}" style="border-width:0" src="{{ site.license_image_url }}" /><br />
               {% endif %}
